--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="app">
+  <section id="landing" class="landing">
+    <div class="landing__glow"></div>
+    <div class="landing__card">
+      <p class="eyebrow">Welcome traveler</p>
+      <h1>Navigate campus in seconds.</h1>
+      <p class="sub">
+        Plan the most efficient path from any room to your destination with live graph search.
+      </p>
+      <div class="quick-stats">
+        <div><span class="stat-num">40+</span><span class="stat-label">Locations</span></div>
+        <div><span class="stat-num">1-click</span><span class="stat-label">Optimal route</span></div>
+        <div><span class="stat-num">Meters</span><span class="stat-label">Weighted edges</span></div>
+      </div>
+      <button id="get-started" class="cta">Get started</button>
+    </div>
+  </section>
+
+  <div class="app inactive">
     <header>
       <div class="dot"></div>
       <h1>Campus Navigation Tool</h1>
