--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <section id="landing" class="landing">
     <div class="landing__glow"></div>
     <div class="landing__card">
-      <p class="eyebrow">Welcome traveler</p>
-      <h1>Navigate campus in seconds.</h1>
+      <p class="eyebrow">Welcome, Ka-Piyu!</p>
+      <h1>Navigate our Los Baños Campus in seconds.</h1>
       <p class="sub">
         Plan the most efficient path from any room to your destination with live graph search.
       </p>
@@ -47,7 +47,7 @@
         </div>
 
         <div class="legend">
-          Uses weighted graph search (Dijkstra) on building distances.
+          Uses weighted graph search (Dijksñ) on building distances.
         </div>
       </section>
 
