--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Campus Navigator</title>
+  <title>LSPU Campus Navigator</title>
+  <link rel="icon" type="image/png" href="sprites/lspu_logo.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="page-brand">
+    <div class="page-brand__inner">
+      <img src="sprites/lspu_logo.png" alt="LSPU logo" class="logo">
+      <div>
+        <p class="eyebrow" style="margin-bottom:4px;">Laguna State Polytechnic University</p>
+        <span class="brand-title">Campus Navigator</span>
+      </div>
+    </div>
+  </div>
+
   <section id="landing" class="landing">
     <div class="landing__glow"></div>
     <div class="landing__card">
