add los banos campus

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="sprites/lspu_logo.png" alt="LSPU logo" class="logo">
       <div>
         <p class="eyebrow" style="margin-bottom:4px;">Laguna State Polytechnic University</p>
-        <span class="brand-title">Campus Navigator</span>
+        <span class="brand-title">Campus Navigator — Los Baños Campus</span>
       </div>
     </div>
   </div>
