--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="legend">
-          Uses weighted graph search (Dijksñ) on building distances.
+          Uses weighted graph search (Dijkstra's algorithm) on building distances.
         </div>
       </section>
 
