--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
     </div>
   </section>
 
+  <!-- Fun Facts Tab -->
+  <div id="fun-facts-tab" class="fun-facts-tab">
+    <div class="fun-facts-content" id="facts-content">
+      <h2>🎓 LSPU Fun Facts</h2>
+      <div class="fact-display">
+        <div class="fact-category" id="fact-category">📜 History</div>
+        <div class="fact-text" id="fact-text">Loading fun fact...</div>
+      </div>
+      <button id="shuffle-fact" class="shuffle-btn">🔀 Show Another Fact</button>
+    </div>
+  </div>
+
   <div class="app inactive">
     <header>
       <div class="dot"></div>
