--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <section id="landing" class="landing">
     <div class="landing__glow"></div>
     <div class="landing__card">
+      <div class="landing__card-actions">
+        <button id="theme-toggle-landing" class="icon-btn square" aria-label="Toggle theme">🌞</button>
+        <button id="open-info-landing" class="icon-btn square" aria-label="Open information">ℹ️</button>
+      </div>
       <p class="eyebrow">Welcome, Ka-Piyu!</p>
       <h1>Navigate our Los Baños Campus in seconds.</h1>
       <p class="sub">
