--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- Fun Facts Tab -->
   <div id="fun-facts-tab" class="fun-facts-tab">
     <div class="fun-facts-content" id="facts-content">
-      <h2>🎓 LSPU Fun Facts</h2>
+      <h2>Did you know?</h2>
       <div class="fact-display">
         <div class="fact-category" id="fact-category">📜 History</div>
         <div class="fact-text" id="fact-text">Loading fun fact...</div>
@@ -88,15 +88,7 @@
         <h3 style="margin:0 0 12px;font-size:16px;">Graph overview</h3>
         <div class="graph-info">
           <div class="stat">
-            <strong>Total locations</strong>
-            <span id="node-count">0</span>
-          </div>
-          <div class="stat">
-            <strong>Total connections</strong>
-            <span id="edge-count">0</span>
-          </div>
-          <div class="stat">
-            <strong>Most connected</strong>
+            <strong>Nearest landmark</strong>
             <span id="hub-node">—</span>
           </div>
           <div class="stat">
