--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="map-card">
           <h3 style="margin:0 0 10px;font-size:15px;">Campus map (Leaflet overlay)</h3>
           <div id="map"></div>
-          <p class="map-note">Use the scroll wheel to pan/zoom the map.</p>
+          <p class="map-note">Click once for your start, click again for your destination. Scroll to pan/zoom.</p>
         </div>
       </section>
     </div>
