--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
         <div class="map-card">
           <h3 style="margin:0 0 10px;font-size:15px;">Campus map (Leaflet overlay)</h3>
           <div id="map"></div>
-          <p class="map-note">Click once for your start, click again for your destination. Scroll to pan/zoom.</p>
+          <p class="map-note">Use scroll to pan/zoom. Click “Place nodes” then click each labeled room on the map to store coordinates.</p>
+          <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:10px;">
+            <button id="place-nodes" class="icon-btn" style="width:auto;">Place nodes</button>
+            <button id="undo-placement" class="icon-btn" style="width:auto;">Undo last placement</button>
+          </div>
         </div>
       </section>
     </div>
