--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         Plan the most efficient path from any room to your destination with live graph search.
       </p>
       <div class="quick-stats">
-        <div><span class="stat-num">40+</span><span class="stat-label">Locations</span></div>
+        <div><span class="stat-num">180+</span><span class="stat-label">Locations</span></div>
         <div><span class="stat-num">1-click</span><span class="stat-label">Optimal route</span></div>
         <div><span class="stat-num">Meters</span><span class="stat-label">Weighted edges</span></div>
       </div>
@@ -76,6 +76,7 @@
         <div class="result-card">
           <p class="result-title">Shortest distance</p>
           <p id="distance" class="distance">—</p>
+          <p id="time" class="distance" style="font-size:16px;color:#0f172a;margin:0 0 8px;">—</p>
           <div class="path" id="path"></div>
         </div>
 
@@ -92,7 +93,7 @@
             <span id="hub-node">—</span>
           </div>
           <div class="stat">
-            <strong>Avg degree</strong>
+            <strong>Est. time</strong>
             <span id="avg-degree">—</span>
           </div>
         </div>
