--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
     </div>
   </div>
 
+  <!-- Mobile Facts Toggle Button -->
+  <button id="facts-toggle-mobile" class="facts-toggle-mobile" aria-label="Toggle fun facts">💡</button>
+
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="app.js"></script>
 </body>
