--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
           <h3 style="margin:0 0 10px;font-size:15px;">Campus map (Leaflet overlay)</h3>
           <div id="map"></div>
           <p class="map-note">Use the scroll wheel to pan/zoom the map.</p>
+          <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:10px;">
+            <button id="fix-nodes-btn" class="icon-btn" style="width:auto;">Fix node positions</button>
+            <button id="undo-fix-placement" class="icon-btn" style="width:auto;">Undo last</button>
+            <button id="download-fixed-positions" class="icon-btn" style="width:auto;">Download coords</button>
+          </div>
         </div>
       </section>
     </div>
