--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </section>
 
   <!-- Fun Facts Tab -->
-  <div id="fun-facts-tab" class="fun-facts-tab">
+  <div id="fun-facts-tab" class="fun-facts-tab hidden">
     <div class="fun-facts-content" id="facts-content">
       <h2>Did you know?</h2>
       <div class="fact-display">
