fixed fun facts

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   </div>
 
   <!-- Mobile Facts Toggle Button -->
-  <button id="facts-toggle-mobile" class="facts-toggle-mobile" aria-label="Toggle fun facts"><i data-feather="bulb"></i></button>
+  <button id="facts-toggle-mobile" class="facts-toggle-mobile" aria-label="Toggle fun facts"><i data-feather="zap"></i></button>
 
   <!-- Local scripts for offline usage -->
   <script src="libs/leaflet.js"></script>
